<resources>
    <string name="app_name">News Feed</string>
    <string name="no_internet">No internet connection available</string>
    <string name="no_articles">No articles found that match the selected preferences. Use settings to change your filters.</string>
    <string name="guardian_query_link">https://content.guardianapis.com/search</string>
    <string name="guardian_api_key_value">5dfacf98-e445-40d8-b686-1c3ecb66e8f4</string>

    <!-- The Guardian API query key -->
    <string name="guardian_api_key">api-key</string>

    <!-- Settings Menu Item -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title -->
    <string name="settings_title">Article Settings</string>

    <!-- Strings For Number of Articles Preference -->
    <string name="settings_number_of_articles_label">Number of articles</string>
    <string name="settings_number_of_articles_key" translatable="false">page-size</string>
    <string name="settings_number_of_articles_default" translatable="false">30</string>

    <!-- Strings for order by Preference -->
    <string name="settings_order_by_label">Order by</string>
    <string name="settings_order_by_key" translatable="false">order-by</string>
    <string name="settings_order_by_default" translatable="false">newest</string>

    <!-- Labels for order by Preference array -->
    <string name="settings_order_by_newest_label" translatable="false">Newest</string>
    <string name="settings_order_by_oldest_label" translatable="false">Oldest</string>

    <!-- Values for order by Preference array -->
    <string name="settings_order_by_newest_value" translatable="false">newest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

    <!-- Strings for filter by Section -->
    <string name="settings_filter_by_section_label">Filter by</string>
    <string name="settings_filter_by_section_key" translatable="false">section</string>
    <string name="settings_filter_by_section_default" translatable="false">all</string>

    <!-- Labels for filter by section array -->
    <string name="settings_filter_by_all_news_label">All news</string>
    <string name="settings_filter_by_technology_label">Technology</string>
    <string name="settings_filter_by_politics_label">Politics</string>
    <string name="settings_filter_by_world_news_label">World news</string>
    <string name="settings_filter_by_business_label">Business</string>
    <string name="settings_filter_by_music_label">Music</string>
    <string name="settings_filter_by_sport_label">Sport</string>

    <!-- Values for filter by section array -->
    <string name="settings_filter_by_all_news_value" translatable="false">all</string>
    <string name="settings_filter_by_technology_value" translatable="false">technology</string>
    <string name="settings_filter_by_politics_value" translatable="false">politics</string>
    <string name="settings_filter_by_world_news_value" translatable="false">world</string>
    <string name="settings_filter_by_business_value" translatable="false">business</string>
    <string name="settings_filter_by_music_value" translatable="false">music</string>
    <string name="settings_filter_by_sport_value" translatable="false">sport</string>

    <!-- uriBuilder strings -->
    <string name="sort_by_section" translatable="false">section</string>
    <string name="format_key" translatable="false">format</string>
    <string name="format_value" translatable="false">json</string>
    <string name="from_date_key" translatable="false">from-date</string>
    <string name="from_date_value" translatable="false">2018-01-01</string>
    <string name="total_key" translatable="false">total</string>
    <string name="total_value" translatable="false">500</string>
    <string name="show_tags_key" translatable="false">show-tags</string>
    <string name="show_tags_value" translatable="false">contributor</string>
    <string name="order_by_key" translatable="false">order-by</string>

    <!-- Log error messages for the exceptions -->
    <string name="htttp_request_io_exception">Input stream error</string>
    <string name="malformed_url_exception">Error creating URL </string>
    <string name="url_connection_response_code_error">Error response code: </string>
    <string name="url_connection_io_exception">Problem retrieving the Article JSON results.</string>
    <string name="parse_json_response_json_exception">Problem parsing the article JSON results</string>

</resources>
